<resources>
    <string name="app_name">201953120_FirstProject</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="team_1">Team 1</string>
    <string name="zero">0</string>
    <string name="team_2">Team 2</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="settings">Settings</string>
    <string name="scorekeeper">ScoreKeeper</string>
</resources>